Fixes the z-index problem where clist dropdown can be hidden behind the text editor (As every click on the text editor increases it's z-index)

--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,7 @@ body.experiment-page {
   margin: 1.2vh;
   margin-top: 10vh;
 }
+
+.dropdown-menu {
+  z-index: 5000;
+}
